// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main page 1`] = `
"<header>
  <a href=\\"\\" class=\\"logo\\">Simple CI
    <!--default-->
  </a>
</header>
<!--Header-->
<main>
  <!--breadcrumbs-->
  <!--if-->
  <!--FlushPageDataLoading-->
  <!--if-->
  <!--PageContent-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;

exports[`main page 2`] = `
"<header>
  <a href=\\"\\" class=\\"logo\\">Simple CI
    <!--default-->
  </a>
</header>
<!--Header-->
<main>
  <!--breadcrumbs-->
  <!--if-->
  <!--ErrorsPanel-->
  <div class=\\"project-list\\">
    <a href=\\"projects/1\\" class=\\"project-card\\"><span class=\\"name\\">Test</span>
      <!--default-->
    </a>
    <!--LinkTo-->
    <a href=\\"projects/2\\" class=\\"project-card\\"><span class=\\"name\\">Test2</span>
      <!--default-->
    </a>
    <!--LinkTo-->
    <!--for-->
    <a href=\\"projects/create\\" class=\\"project-card project-card-create\\">
      <div class=\\"create-icon\\"></div>
      <!--default-->
    </a>
    <!--LinkTo-->
  </div>
  <!--ProjectsList-->
  <!--content-->
  <!--if-->
  <!--PageContent-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;
